charts/pponpub/deployment-bg.yaml
apiVersion: argoproj.io/v1alpha1 #apps/v1
kind: Rollout
metadata:
  name: ppon
spec:
  replicas: 1
  revisionHistoryLimit: 3
  selector:
    matchLabels:
      app: ppon
  template:
    metadata:
      labels:
        app: ppon
    spec:
      containers:
      - name: ppon
        image: myharbor.apps.211-34-231-93.nip.io/mvp/mvp_ppon_pub_backend
        imagePullPolicy: Always
        ports:
        - containerPort: 8080
        resources:
          limits:
            cpu: 1
            memory: 1G
          requests:
            cpu: 100m
            memory: 50Mi  
  strategy:
    blueGreen: 
      #activeService는 이전의 배포된 Blue 서비스
      activeService: ppon
      
      #previewService는 새롭게 배포될 Green 서비스
      previewService: ppon-preview
      
      #autoPromotioEnabled 옵션은 Blue/Green 배포를 자동으로 진행할 것인지 여부. false 옵션을 사용해 수동으로 지정
      autoPromotionEnabled: false
