charts/pponpub/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: ppon
spec:
  replicas: 1
  revisionHistoryLimit: 3
  selector:
    matchLabels:
      app: ppon
  template:
    metadata:
      labels:
        app: ppon
    spec:
      containers:
      - name: ppon
        image: myharbor.apps.211-34-231-93.nip.io/mvp/mvp_ppon_pub_backend
        #image: ghcr.io/cloudnative-mvp1/mvp_pponpub_backend:v1
        imagePullPolicy: Always
        ports:
        - containerPort: 8080
        resources:
          limits:
            cpu: 1
            memory: 1G
          requests:
            cpu: 100m
            memory: 50Mi
        # readinessProbe:
        #     httpGet:
        #       path: /mvp/actuator/health/readiness
        #       port: 8080
        #       scheme: HTTP
        #     initialDelaySeconds: 300
        #     timeoutSeconds: 30
        #     periodSeconds: 15
        #     successThreshold: 1
        #     failureThreshold: 5
        # livenessProbe:
        #     httpGet:
        #       path: /mvp/actuator/health/liveness
        #       port: 8080
        #       scheme: HTTP
        #     initialDelaySeconds: 300
        #     timeoutSeconds: 30
        #     periodSeconds: 15
        #     successThreshold: 1
        #     failureThreshold: 5
