charts/pponpub/service-bg.yaml
apiVersion: v1
kind: Service
metadata:
  name: ppon
  labels: # service monitor 의 selector 를 위하여 생성
    app: ppon
spec:
  ports:
  - port: 80
    targetPort: 8080
    name: http
  selector:
    app: ppon
  type: ClusterIP
---
apiVersion: v1
kind: Service
metadata:
  name: ppon-preview
  labels: # service monitor 의 selector 를 위하여 생성
    app: ppon
spec:
  ports:
  - port: 80
    targetPort: 8080
    name: http
  selector:
    app: ppon
  type: ClusterIP
